lang/test/testdata/errors/type_mismatch.scampi
module main

import "std"

std.pkg { packages = 42, source = std.system {} }
